Move tutorial kind of benchmark to a new package
Move tutorial kind of benchmark to a package 'com.github.mcfongtw.tutorial'

Add gc parameters in jvmArgs for some existing benchmarks

Add ParallelGcBenchmark / ConcurrentMarkSweepGcBenchmark / G1GcBenchmark which extends from ObjectReferenceBenchmark