@@ -19,7 +19,7 @@ import java.util.concurrent.TimeUnit;
 @OutputTimeUnit(TimeUnit.SECONDS)
 @Measurement(iterations = 10)
 @Warmup(iterations = 5)
-@Fork(3)
+@Fork(value = 3, jvmArgsAppend = {"-XX:+PrintGCDetails"})
 @Threads(1)
 public class ObjectReferenceBenchmark extends BenchmarkBase {
 
